fix: resolved issue where datepicker was not visible with removing dialog from breeze's modal component

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.dp__menu {
+    z-index: 999999 !important;
+}
